--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="preload" as="image" href="photos/deepa.jpg">
+<link rel="preload" as="image" href="photos/devananda.jpg">
+<link rel="preload" as="image" href="photos/ham.jpg">
+<link rel="preload" as="image" href="photos/jairaj.jpg">
+<link rel="preload" as="image" href="photos/shamna.jpg">
+<link rel="preload" as="image" href="photos/sreerag.jpg">
   <meta charset="UTF-8">
   <title>Wish Wall 🎉</title>
   <link rel="stylesheet" href="style.css?v=3">
